; ModuleID = '/home/carl/AnghaBench/reactos/modules/rosapps/applications/screensavers/butterflies/extr_butterflies.c_ReadRegistry.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rosapps/applications/screensavers/butterflies/extr_butterflies.c_ReadRegistry.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@HKEY_CURRENT_USER = common dso_local global i32 0, align 4
@registryPath = common dso_local global i32 0, align 4
@KEY_READ = common dso_local global i32 0, align 4
@ERROR_SUCCESS = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [7 x i8] c"Rotate\00", align 1
@dRotate = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ReadRegistry() #0 {
  %1 = alloca i64, align 8
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = call i32 (...) @SetDefaults()
  %7 = load i32, i32* @HKEY_CURRENT_USER, align 4
  %8 = load i32, i32* @registryPath, align 4
  %9 = load i32, i32* @KEY_READ, align 4
  %10 = call i64 @RegOpenKeyEx(i32 %7, i32 %8, i32 0, i32 %9, i32* %2)
  store i64 %10, i64* %1, align 8
  %11 = load i64, i64* %1, align 8
  %12 = load i64, i64* @ERROR_SUCCESS, align 8
  %13 = icmp ne i64 %11, %12
  br i1 %13, label %14, label %15

14:                                               ; preds = %0
  br label %28

15:                                               ; preds = %0
  store i32 4, i32* %4, align 4
  %16 = load i32, i32* %2, align 4
  %17 = call i32 @_T(i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0))
  %18 = ptrtoint i32* %5 to i32
  %19 = call i64 @RegQueryValueEx(i32 %16, i32 %17, i32 0, i32* %3, i32 %18, i32* %4)
  store i64 %19, i64* %1, align 8
  %20 = load i64, i64* %1, align 8
  %21 = load i64, i64* @ERROR_SUCCESS, align 8
  %22 = icmp eq i64 %20, %21
  br i1 %22, label %23, label %25

23:                                               ; preds = %15
  %24 = load i32, i32* %5, align 4
  store i32 %24, i32* @dRotate, align 4
  br label %25

25:                                               ; preds = %23, %15
  %26 = load i32, i32* %2, align 4
  %27 = call i32 @RegCloseKey(i32 %26)
  br label %28

28:                                               ; preds = %25, %14
  ret void
}

declare dso_local i32 @SetDefaults(...) #1

declare dso_local i64 @RegOpenKeyEx(i32, i32, i32, i32, i32*) #1

declare dso_local i64 @RegQueryValueEx(i32, i32, i32, i32*, i32, i32*) #1

declare dso_local i32 @_T(i8*) #1

declare dso_local i32 @RegCloseKey(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
